Add Azure Blob Storage integration and frontend API services

--- a/.env.example
+++ b/.env.example
@@ -32,10 +32,22 @@ SEARCH_ENDPOINT=https://your-search-service.search.windows.net/
 SEARCH_KEY=your-search-service-key-here
 
 # Azure Blob Storage Configuration
-STORAGE_ACCOUNT_NAME=your-storage-account-name
+STORAGE_ACCOUNT_NAME=dataexc
 STORAGE_ACCOUNT_KEY=your-storage-account-key-here
-CONTAINER_NAME=vehicle-insuarance
+CONTAINER_NAME=vehicle-insurance
+
+# Or use connection string instead of account key
+# AZURE_STORAGE_CONNECTION_STRING=DefaultEndpointsProtocol=https;AccountName=dataexc;AccountKey=YOUR_KEY;EndpointSuffix=core.windows.net
+
+# For Python backend (blob_service.py)
+AZURE_STORAGE_ACCOUNT_NAME=dataexc
+AZURE_STORAGE_ACCOUNT_KEY=your-storage-account-key-here
+AZURE_STORAGE_CONTAINER_NAME=vehicle-insurance
+# OR
+# AZURE_STORAGE_CONNECTION_STRING=DefaultEndpointsProtocol=https;AccountName=dataexc;AccountKey=YOUR_KEY;EndpointSuffix=core.windows.net
 
 # Frontend Environment Variables (optional, for Next.js)
-# NEXT_PUBLIC_API_URL=http://localhost:8000
+# NEXT_PUBLIC_API_URL=http://localhost:8001
+# NEXT_PUBLIC_STORAGE_ACCOUNT_NAME=dataexc
+# NEXT_PUBLIC_CONTAINER_NAME=vehicle-insurance
 # COSMOS_DB_ENDPOINT=https://your-cosmos-account.documents.azure.com:443/
