Refactor orchestrator into modular components and improve policy lookup agent
Split 1416-line orchestrator into focused modules, extract agent instructions to files, add SETUP.md, fix policy lookup to search index

--- a/.env.example
+++ b/.env.example
@@ -1,53 +1,68 @@
-# Environment variables for Azure Auto Insurance Claims System
-# Copy this file to .env and fill in your actual values
+# ============================================================
+# Azure Auto Insurance Claims System - Environment Variables
+# ============================================================
+# IMPORTANT: Copy this file to .env and fill in your actual values
+# Never commit the .env file to version control
 
-# Azure OpenAI Configuration
+# ============================================================
+# REQUIRED: Azure AI Project Configuration
+# ============================================================
+AZURE_ENDPOINT=https://eastus2.api.azureml.ms
+AZURE_RESOURCE_GROUP=your-resource-group-name
+AZURE_SUBSCRIPTION_ID=your-subscription-id-here
+AZURE_PROJECT_NAME=your-project-name
+
+# ============================================================
+# REQUIRED: Azure OpenAI Configuration
+# ============================================================
 AZURE_OPENAI_DEPLOYMENT_NAME=gpt-4o
 AZURE_OPENAI_ENDPOINT=https://your-openai-resource.openai.azure.com/
 AZURE_OPENAI_API_KEY=your-azure-openai-api-key-here
 
-# Cosmos DB Configuration
+# ============================================================
+# REQUIRED: Cosmos DB Configuration (Memory Storage)
+# ============================================================
 COSMOS_DB_ENDPOINT=https://your-cosmos-account.documents.azure.com:443/
 COSMOS_DB_KEY=your-cosmos-db-key-here
 COSMOS_DB_DATABASE_NAME=insurance
 COSMOS_DB_CONTAINER_NAME=data
 
-# Azure Subscription Details
-AZURE_SUBSCRIPTION_ID=your-subscription-id-here
-AZURE_RESOURCE_GROUP=your-resource-group-name
-AZURE_PROJECT_NAME=your-project-name
-AZURE_ENDPOINT=https://your-region.api.azureml.ms
+# ============================================================
+# REQUIRED: Azure AI Search Configuration
+# ============================================================
+SEARCH_ENDPOINT=https://your-search-service.search.windows.net/
+SEARCH_KEY=your-search-service-key-here
 
-# Azure AI Search Index Names
+# Azure AI Search Index Names (default values)
 POLICY_INDEX_NAME=policy
 INSURANCE_INDEX_NAME=insurance
 BILL_INDEX_NAME=bill
 
-# Azure AI Content Understanding
+# ============================================================
+# REQUIRED: Azure Blob Storage Configuration
+# ============================================================
+# Option 1: Use Account Name and Key
+AZURE_STORAGE_ACCOUNT_NAME=your-storage-account-name
+AZURE_STORAGE_ACCOUNT_KEY=your-storage-account-key-here
+AZURE_STORAGE_CONTAINER_NAME=vehicle-insurance
+
+# Option 2: Or use Connection String instead
+# AZURE_STORAGE_CONNECTION_STRING=DefaultEndpointsProtocol=https;AccountName=your-account;AccountKey=YOUR_KEY;EndpointSuffix=core.windows.net
+
+# ============================================================
+# OPTIONAL: Audit API Configuration
+# ============================================================
+AUDIT_API_BASE_URL=https://cosmosaudit.azurewebsites.net
+
+# ============================================================
+# OPTIONAL: Azure AI Content Understanding
+# ============================================================
 AZURE_AI_ENDPOINT=https://your-ai-endpoint.cognitiveservices.azure.com/
 AZURE_AI_API_VERSION=2025-05-01-preview
 
-# Azure AI Search
-SEARCH_ENDPOINT=https://your-search-service.search.windows.net/
-SEARCH_KEY=your-search-service-key-here
-
-# Azure Blob Storage Configuration
-STORAGE_ACCOUNT_NAME=dataexc
-STORAGE_ACCOUNT_KEY=your-storage-account-key-here
-CONTAINER_NAME=vehicle-insurance
-
-# Or use connection string instead of account key
-# AZURE_STORAGE_CONNECTION_STRING=DefaultEndpointsProtocol=https;AccountName=dataexc;AccountKey=YOUR_KEY;EndpointSuffix=core.windows.net
-
-# For Python backend (blob_service.py)
-AZURE_STORAGE_ACCOUNT_NAME=dataexc
-AZURE_STORAGE_ACCOUNT_KEY=your-storage-account-key-here
-AZURE_STORAGE_CONTAINER_NAME=vehicle-insurance
-# OR
-# AZURE_STORAGE_CONNECTION_STRING=DefaultEndpointsProtocol=https;AccountName=dataexc;AccountKey=YOUR_KEY;EndpointSuffix=core.windows.net
-
-# Frontend Environment Variables (optional, for Next.js)
+# ============================================================
+# OPTIONAL: Frontend Configuration (Next.js)
+# ============================================================
 # NEXT_PUBLIC_API_URL=http://localhost:8001
-# NEXT_PUBLIC_STORAGE_ACCOUNT_NAME=dataexc
+# NEXT_PUBLIC_STORAGE_ACCOUNT_NAME=your-storage-account-name
 # NEXT_PUBLIC_CONTAINER_NAME=vehicle-insurance
-# COSMOS_DB_ENDPOINT=https://your-cosmos-account.documents.azure.com:443/
