--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ jsonref==1.1.0
 Pillow==10.1.0
 
 # Azure Core Services
-azure-core==1.29.5
+azure-core>=1.31.0
 azure-identity==1.25.0
 
 # Azure AI Services
