Migrate to managed identity authentication for Azure services

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@
 # ============================================================
 # IMPORTANT: Copy this file to .env and fill in your actual values
 # Never commit the .env file to version control
+#
+# AUTHENTICATION: This application uses Managed Identity (DefaultAzureCredential)
+# for Azure services. API keys are only needed for Azure AI Search.
 
 # ============================================================
 # REQUIRED: Azure AI Project Configuration
@@ -14,40 +17,37 @@ AZURE_PROJECT_NAME=your-project-name
 
 # ============================================================
 # REQUIRED: Azure OpenAI Configuration
+# Uses Managed Identity - no API key required
 # ============================================================
 AZURE_OPENAI_DEPLOYMENT_NAME=gpt-4o
-AZURE_OPENAI_ENDPOINT=https://your-openai-resource.openai.azure.com/
-AZURE_OPENAI_API_KEY=your-azure-openai-api-key-here
+AZURE_OPENAI_ENDPOINT=https://your-openai-resource.cognitiveservices.azure.com/
 
 # ============================================================
 # REQUIRED: Cosmos DB Configuration (Memory Storage)
+# Uses Managed Identity - no key required
 # ============================================================
 COSMOS_DB_ENDPOINT=https://your-cosmos-account.documents.azure.com:443/
-COSMOS_DB_KEY=your-cosmos-db-key-here
-COSMOS_DB_DATABASE_NAME=insurance
+COSMOS_DB_DATABASE_NAME=auto
 COSMOS_DB_CONTAINER_NAME=data
 
 # ============================================================
 # REQUIRED: Azure AI Search Configuration
+# Note: Search still requires API key authentication
 # ============================================================
 SEARCH_ENDPOINT=https://your-search-service.search.windows.net/
-SEARCH_KEY=your-search-service-key-here
+SEARCH_KEY=your-search-service-api-key-here
 
-# Azure AI Search Index Names (default values)
-POLICY_INDEX_NAME=policy
-INSURANCE_INDEX_NAME=insurance
-BILL_INDEX_NAME=bill
+# Azure AI Search Index Names
+POLICY_INDEX_NAME=policyauto
+INSURANCE_INDEX_NAME=picturesauto
+BILL_INDEX_NAME=billsauto
 
 # ============================================================
 # REQUIRED: Azure Blob Storage Configuration
+# Uses Managed Identity - no key required
 # ============================================================
-# Option 1: Use Account Name and Key
 AZURE_STORAGE_ACCOUNT_NAME=your-storage-account-name
-AZURE_STORAGE_ACCOUNT_KEY=your-storage-account-key-here
 AZURE_STORAGE_CONTAINER_NAME=vehicle-insurance
-
-# Option 2: Or use Connection String instead
-# AZURE_STORAGE_CONNECTION_STRING=DefaultEndpointsProtocol=https;AccountName=your-account;AccountKey=YOUR_KEY;EndpointSuffix=core.windows.net
 
 # ============================================================
 # OPTIONAL: Audit API Configuration
