--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 gunicorn==21.2.0
-pydantic==2.5.0
+pydantic>=2.7.0
 
 # Configuration & Utilities
 python-dotenv==1.0.0
