--- a/.github/workflows/master_autoinsurance-frontend.yml
+++ b/.github/workflows/master_autoinsurance-frontend.yml
@@ -23,17 +23,17 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and test
+      - name: npm install and build
+        working-directory: ./frontend
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: ./frontend
 
   deploy:
     runs-on: ubuntu-latest
@@ -62,4 +62,5 @@ jobs:
           app-name: 'autoinsurance-frontend'
           slot-name: 'Production'
           package: .
+
           
