--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,11 +38,11 @@
     "zustand": "^5.0.8"
   },
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start -p $PORT",
+  "lint": "next lint"
+},
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^20",
