Fix: Use standalone output mode for Azure App Service deployment

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,7 +40,7 @@
   "scripts": {
   "dev": "next dev",
   "build": "next build",
-  "start": "next start -p $PORT",
+  "start": "node server.js",
   "lint": "next lint"
 },
   "devDependencies": {
