--- a/.github/workflows/master_autoinsurance-frontend.yml
+++ b/.github/workflows/master_autoinsurance-frontend.yml
@@ -27,13 +27,21 @@ jobs:
         working-directory: ./frontend
         run: |
           npm install
-          npm run build --if-present
+          npm run build
+
+      - name: Prepare standalone deployment
+        working-directory: ./frontend
+        run: |
+          cp -r .next/standalone/. ./deploy/
+          cp -r .next/static ./deploy/.next/static
+          cp -r public ./deploy/public
+          cp server.js ./deploy/
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: ./frontend
+          path: ./frontend/deploy
 
   deploy:
     runs-on: ubuntu-latest
