--- a/.github/workflows/master_autoinsurance-frontend.yml
+++ b/.github/workflows/master_autoinsurance-frontend.yml
@@ -33,14 +33,13 @@ jobs:
         working-directory: ./frontend
         run: |
           mkdir -p ./deploy
+          # Copy the standalone build (includes auto-generated server.js)
           cp -r .next/standalone/. ./deploy/
+          # Copy static files
+          mkdir -p ./deploy/.next
           cp -r .next/static ./deploy/.next/static
+          # Copy public folder if it exists
           [ -d public ] && cp -r public ./deploy/public || echo "No public folder"
-          cp server.js ./deploy/
-          # Remove package.json to prevent Azure from trying to rebuild
-          rm -f ./deploy/package.json
-          # Create marker to skip Oryx build
-          echo "SCM_DO_BUILD_DURING_DEPLOYMENT=false" > ./deploy/.env
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
