Update workflow configurations

--- a/.github/workflows/master_autoinsurance.yml
+++ b/.github/workflows/master_autoinsurance.yml
@@ -8,6 +8,11 @@ on:
   push:
     branches:
       - master
+    paths:
+      - "**/*.py"
+      - "requirements.txt"
+      - ".github/workflows/master_autoinsurance.yml"
+      
   workflow_dispatch:
 
 jobs:
