--- a/.github/workflows/master_autoinsurance-frontend.yml
+++ b/.github/workflows/master_autoinsurance-frontend.yml
@@ -7,6 +7,9 @@ on:
   push:
     branches:
       - master
+    paths:
+      - "frontend/**"
+      - ".github/workflows/master_autoinsurance-frontend.yml"
   workflow_dispatch:
 
 jobs:
