Add Docker support, update gitignore, and cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,12 @@ credentials/
 
 # Archived files
 .archive/
+*.yml
+DEPLOYMENT.md
+DEPLOYMENT-GUIDE.md
+scripts/
+startup-batch.sh
+api_server.py
+*logs/
+*logs-test/
+azure-config-template.txt
